--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 #header {
   position: sticky;
-  z-index: 10;
+  z-index: 1000;
   top: 0%;
 }
 nav {
@@ -390,7 +390,9 @@ nav ul li a.active {
 .lazy-image.loaded {
   opacity: 1;
 }
-
+.hidden {
+  display: none;
+}
 @media (max-width: 700px) {
   #portfolio h1 {
     color: #fff;
