--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ nav ul li a.active {
   background-color: rgb(161, 161, 85);
   border-radius: 10px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+  z-index: 10;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -536,7 +536,7 @@ textarea.input {
   transform: translateY(0);
 }
 
-.btn {
+.btn-submit {
   padding: 0.6rem 1.3rem;
   background-color: rgb(161, 161, 85);
   border: 2px solid #fafafa;
@@ -550,7 +550,7 @@ textarea.input {
   margin: 0;
 }
 
-.btn:hover {
+.btn-submit:hover {
   background-color: transparent;
   color: #fff;
 }
