--- a/style.css
+++ b/style.css
@@ -58,7 +58,12 @@ nav ul li a.active {
 .navbar .navbar-toggler {
   border: transparent;
 }
-/* .hide-nav {
+.navbar-brand img:hover {
+  scale: 1.1;
+  transition: 0.4s ease-in;
+}
+/* 
+.hide-nav {
   display: none;
 } */
 .bgColor {
@@ -82,6 +87,68 @@ nav ul li a.active {
     color: yellow;
   }
 }
+/*--------------------------------------------------------------------------*/
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(22, 21, 21, 0.8); /* Slightly white for blur effect */
+  backdrop-filter: blur(5px); /* Blur effect */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure it's above all content */
+}
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.line {
+  width: 8px;
+  height: 35px;
+  background-color: yellow;
+  animation: loading 1s infinite ease-in-out;
+}
+
+.line:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.line:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes loading {
+  0%,
+  80%,
+  100% {
+    transform: scaleY(0.4);
+  }
+  40% {
+    transform: scaleY(1);
+  }
+}
+
+body.loaded {
+  overflow: auto; /* Restore scrolling after loading */
+}
+.reveal {
+  opacity: 0;
+  transform: translateY(50px);
+  will-change: opacity, transform;
+  transition: all 0.8s ease-out;
+}
 /*----------------------------Home Secion---------------------------*/
 #home {
   position: relative;
@@ -91,6 +158,7 @@ nav ul li a.active {
     url(./src/img/background.jpeg);
   /* background-color: #2e3019; */
   background-size: cover;
+  background-position: top;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -717,6 +785,10 @@ textarea.input {
 .copyright span {
   padding: 2px;
 }
+.copyright span a {
+  text-decoration: none;
+  color: yellow;
+}
 
 @media (max-width: 396px) {
   #contact {
@@ -725,7 +797,11 @@ textarea.input {
   .form {
     grid-template-columns: 1fr;
   }
-
+  .alert {
+    position: absolute;
+    top: 2%;
+    margin: 0rem 1rem;
+  }
   .contact-info:before {
     bottom: initial;
     top: -75px;
